// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`S3 origins When origin is an S3 URL only accessible via CloudFront creates distribution 1`] = `
Object {
  "DistributionConfigWithTags": Object {
    "DistributionConfig": Object {
      "Aliases": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CacheBehaviors": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CallerReference": "1566599541192",
      "Comment": "",
      "CustomErrorResponses": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "DefaultCacheBehavior": Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": false,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": false,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "RealtimeLogConfigArn": undefined,
        "ResponseHeadersPolicyId": "",
        "SmoothStreaming": false,
        "TargetOriginId": "mybucket",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      "Enabled": true,
      "HttpVersion": "http2",
      "Origins": Object {
        "Items": Array [
          Object {
            "CustomHeaders": Object {
              "Items": Array [],
              "Quantity": 0,
            },
            "DomainName": "mybucket.s3.amazonaws.com",
            "Id": "mybucket",
            "OriginPath": "",
            "S3OriginConfig": Object {
              "OriginAccessIdentity": "origin-access-identity/cloudfront/access-identity-xyz",
            },
          },
        ],
        "Quantity": 1,
      },
      "PriceClass": "PriceClass_All",
    },
    "Tags": Object {
      "Items": Array [],
    },
  },
}
`;

exports[`S3 origins When origin is an S3 URL only accessible via CloudFront updates distribution 1`] = `
Object {
  "DistributionConfigWithTags": Object {
    "DistributionConfig": Object {
      "Aliases": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CacheBehaviors": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CallerReference": "1566599541192",
      "Comment": "",
      "CustomErrorResponses": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "DefaultCacheBehavior": Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": false,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": false,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "RealtimeLogConfigArn": undefined,
        "ResponseHeadersPolicyId": "",
        "SmoothStreaming": false,
        "TargetOriginId": "mybucket",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      "Enabled": true,
      "HttpVersion": "http2",
      "Origins": Object {
        "Items": Array [
          Object {
            "CustomHeaders": Object {
              "Items": Array [],
              "Quantity": 0,
            },
            "DomainName": "mybucket.s3.amazonaws.com",
            "Id": "mybucket",
            "OriginPath": "",
            "S3OriginConfig": Object {
              "OriginAccessIdentity": "origin-access-identity/cloudfront/access-identity-xyz",
            },
          },
        ],
        "Quantity": 1,
      },
      "PriceClass": "PriceClass_All",
    },
    "Tags": Object {
      "Items": Array [],
    },
  },
}
`;

exports[`S3 origins When origin is an S3 URL only accessible via CloudFront updates distribution persisting existing identity 1`] = `
Object {
  "DistributionConfig": Object {
    "CacheBehaviors": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "Comment": "",
    "CustomErrorResponses": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "DefaultCacheBehavior": Object {
      "AllowedMethods": Object {
        "CachedMethods": Object {
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Compress": false,
      "DefaultTTL": 86400,
      "FieldLevelEncryptionId": "",
      "ForwardedValues": Object {
        "Cookies": Object {
          "Forward": "none",
        },
        "Headers": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "QueryString": false,
        "QueryStringCacheKeys": Object {
          "Items": Array [],
          "Quantity": 0,
        },
      },
      "LambdaFunctionAssociations": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "MaxTTL": 31536000,
      "MinTTL": 0,
      "RealtimeLogConfigArn": undefined,
      "ResponseHeadersPolicyId": "",
      "SmoothStreaming": false,
      "TargetOriginId": "anotherbucket",
      "TrustedSigners": Object {
        "Enabled": false,
        "Items": Array [],
        "Quantity": 0,
      },
      "ViewerProtocolPolicy": "redirect-to-https",
    },
    "Enabled": true,
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomHeaders": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "DomainName": "anotherbucket.s3.amazonaws.com",
          "Id": "anotherbucket",
          "OriginPath": "",
          "S3OriginConfig": Object {
            "OriginAccessIdentity": "origin-access-identity/cloudfront/access-identity-1",
          },
        },
      ],
      "Quantity": 1,
    },
    "PriceClass": "PriceClass_All",
  },
  "Id": "distributionwithS3origin",
  "IfMatch": "etag",
}
`;

exports[`S3 origins When origin is an S3 bucket URL creates distribution 1`] = `
Object {
  "DistributionConfigWithTags": Object {
    "DistributionConfig": Object {
      "Aliases": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CacheBehaviors": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CallerReference": "1566599541192",
      "Comment": "",
      "CustomErrorResponses": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "DefaultCacheBehavior": Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": false,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": false,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "RealtimeLogConfigArn": undefined,
        "ResponseHeadersPolicyId": "",
        "SmoothStreaming": false,
        "TargetOriginId": "mybucket",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      "Enabled": true,
      "HttpVersion": "http2",
      "Origins": Object {
        "Items": Array [
          Object {
            "CustomHeaders": Object {
              "Items": Array [],
              "Quantity": 0,
            },
            "DomainName": "mybucket.s3.amazonaws.com",
            "Id": "mybucket",
            "OriginPath": "",
            "S3OriginConfig": Object {
              "OriginAccessIdentity": "",
            },
          },
        ],
        "Quantity": 1,
      },
      "PriceClass": "PriceClass_All",
    },
    "Tags": Object {
      "Items": Array [],
    },
  },
}
`;

exports[`S3 origins When origin is an S3 bucket URL updates distribution 1`] = `
Object {
  "DistributionConfig": Object {
    "CacheBehaviors": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "Comment": "",
    "CustomErrorResponses": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "DefaultCacheBehavior": Object {
      "AllowedMethods": Object {
        "CachedMethods": Object {
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Compress": false,
      "DefaultTTL": 86400,
      "FieldLevelEncryptionId": "",
      "ForwardedValues": Object {
        "Cookies": Object {
          "Forward": "none",
        },
        "Headers": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "QueryString": false,
        "QueryStringCacheKeys": Object {
          "Items": Array [],
          "Quantity": 0,
        },
      },
      "LambdaFunctionAssociations": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "MaxTTL": 31536000,
      "MinTTL": 0,
      "RealtimeLogConfigArn": undefined,
      "ResponseHeadersPolicyId": "",
      "SmoothStreaming": false,
      "TargetOriginId": "anotherbucket",
      "TrustedSigners": Object {
        "Enabled": false,
        "Items": Array [],
        "Quantity": 0,
      },
      "ViewerProtocolPolicy": "redirect-to-https",
    },
    "Enabled": true,
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomHeaders": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "DomainName": "anotherbucket.s3.amazonaws.com",
          "Id": "anotherbucket",
          "OriginPath": "",
          "S3OriginConfig": Object {
            "OriginAccessIdentity": "",
          },
        },
      ],
      "Quantity": 1,
    },
    "PriceClass": "PriceClass_All",
  },
  "Id": "distributionwithS3origin",
  "IfMatch": "etag",
}
`;

exports[`S3 origins when origin is outside of us-east-1 and contains dots should use the origin's host at the DomainName 1`] = `
Object {
  "DistributionConfigWithTags": Object {
    "DistributionConfig": Object {
      "Aliases": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CacheBehaviors": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CallerReference": "1566599541192",
      "Comment": "",
      "CustomErrorResponses": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "DefaultCacheBehavior": Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": false,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": false,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "RealtimeLogConfigArn": undefined,
        "ResponseHeadersPolicyId": "",
        "SmoothStreaming": false,
        "TargetOriginId": "mybucket.with.dots",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      "Enabled": true,
      "HttpVersion": "http2",
      "Origins": Object {
        "Items": Array [
          Object {
            "CustomHeaders": Object {
              "Items": Array [],
              "Quantity": 0,
            },
            "DomainName": "mybucket.with.dots.s3.eu-west-1.amazonaws.com",
            "Id": "mybucket.with.dots",
            "OriginPath": "",
            "S3OriginConfig": Object {
              "OriginAccessIdentity": "",
            },
          },
        ],
        "Quantity": 1,
      },
      "PriceClass": "PriceClass_All",
    },
    "Tags": Object {
      "Items": Array [],
    },
  },
}
`;

exports[`S3 origins when origin is outside of us-east-1 and contains dots updates distribution 1`] = `
Object {
  "DistributionConfig": Object {
    "CacheBehaviors": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "Comment": "",
    "CustomErrorResponses": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "DefaultCacheBehavior": Object {
      "AllowedMethods": Object {
        "CachedMethods": Object {
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Compress": false,
      "DefaultTTL": 86400,
      "FieldLevelEncryptionId": "",
      "ForwardedValues": Object {
        "Cookies": Object {
          "Forward": "none",
        },
        "Headers": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "QueryString": false,
        "QueryStringCacheKeys": Object {
          "Items": Array [],
          "Quantity": 0,
        },
      },
      "LambdaFunctionAssociations": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "MaxTTL": 31536000,
      "MinTTL": 0,
      "RealtimeLogConfigArn": undefined,
      "ResponseHeadersPolicyId": "",
      "SmoothStreaming": false,
      "TargetOriginId": "anotherbucket",
      "TrustedSigners": Object {
        "Enabled": false,
        "Items": Array [],
        "Quantity": 0,
      },
      "ViewerProtocolPolicy": "redirect-to-https",
    },
    "Enabled": true,
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomHeaders": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "DomainName": "anotherbucket.s3.eu-west-1.amazonaws.com",
          "Id": "anotherbucket",
          "OriginPath": "",
          "S3OriginConfig": Object {
            "OriginAccessIdentity": "",
          },
        },
      ],
      "Quantity": 1,
    },
    "PriceClass": "PriceClass_All",
  },
  "Id": "distributionwithS3origin",
  "IfMatch": "etag",
}
`;

exports[`S3 origins when origin is outside of us-east-1 and contains s3 and dots should use the origin's host at the DomainName 1`] = `
Object {
  "DistributionConfigWithTags": Object {
    "DistributionConfig": Object {
      "Aliases": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CacheBehaviors": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CallerReference": "1566599541192",
      "Comment": "",
      "CustomErrorResponses": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "DefaultCacheBehavior": Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": false,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": false,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "RealtimeLogConfigArn": undefined,
        "ResponseHeadersPolicyId": "",
        "SmoothStreaming": false,
        "TargetOriginId": "mybucket.s3.s3",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      "Enabled": true,
      "HttpVersion": "http2",
      "Origins": Object {
        "Items": Array [
          Object {
            "CustomHeaders": Object {
              "Items": Array [],
              "Quantity": 0,
            },
            "DomainName": "mybucket.s3.s3.s3.eu-west-1.amazonaws.com",
            "Id": "mybucket.s3.s3",
            "OriginPath": "",
            "S3OriginConfig": Object {
              "OriginAccessIdentity": "",
            },
          },
        ],
        "Quantity": 1,
      },
      "PriceClass": "PriceClass_All",
    },
    "Tags": Object {
      "Items": Array [],
    },
  },
}
`;

exports[`S3 origins when origin is outside of us-east-1 and contains s3 and dots updates distribution 1`] = `
Object {
  "DistributionConfig": Object {
    "CacheBehaviors": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "Comment": "",
    "CustomErrorResponses": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "DefaultCacheBehavior": Object {
      "AllowedMethods": Object {
        "CachedMethods": Object {
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Compress": false,
      "DefaultTTL": 86400,
      "FieldLevelEncryptionId": "",
      "ForwardedValues": Object {
        "Cookies": Object {
          "Forward": "none",
        },
        "Headers": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "QueryString": false,
        "QueryStringCacheKeys": Object {
          "Items": Array [],
          "Quantity": 0,
        },
      },
      "LambdaFunctionAssociations": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "MaxTTL": 31536000,
      "MinTTL": 0,
      "RealtimeLogConfigArn": undefined,
      "ResponseHeadersPolicyId": "",
      "SmoothStreaming": false,
      "TargetOriginId": "anotherbucket",
      "TrustedSigners": Object {
        "Enabled": false,
        "Items": Array [],
        "Quantity": 0,
      },
      "ViewerProtocolPolicy": "redirect-to-https",
    },
    "Enabled": true,
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomHeaders": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "DomainName": "anotherbucket.s3.eu-west-1.amazonaws.com",
          "Id": "anotherbucket",
          "OriginPath": "",
          "S3OriginConfig": Object {
            "OriginAccessIdentity": "",
          },
        },
      ],
      "Quantity": 1,
    },
    "PriceClass": "PriceClass_All",
  },
  "Id": "distributionwithS3origin",
  "IfMatch": "etag",
}
`;

exports[`S3 origins when origin is outside of us-east-1 should use the origin's host at the DomainName 1`] = `
Object {
  "DistributionConfigWithTags": Object {
    "DistributionConfig": Object {
      "Aliases": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CacheBehaviors": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "CallerReference": "1566599541192",
      "Comment": "",
      "CustomErrorResponses": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "DefaultCacheBehavior": Object {
        "AllowedMethods": Object {
          "CachedMethods": Object {
            "Items": Array [
              "HEAD",
              "GET",
            ],
            "Quantity": 2,
          },
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Compress": false,
        "DefaultTTL": 86400,
        "FieldLevelEncryptionId": "",
        "ForwardedValues": Object {
          "Cookies": Object {
            "Forward": "none",
          },
          "Headers": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "QueryString": false,
          "QueryStringCacheKeys": Object {
            "Items": Array [],
            "Quantity": 0,
          },
        },
        "LambdaFunctionAssociations": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "MaxTTL": 31536000,
        "MinTTL": 0,
        "RealtimeLogConfigArn": undefined,
        "ResponseHeadersPolicyId": "",
        "SmoothStreaming": false,
        "TargetOriginId": "mybucket",
        "TrustedSigners": Object {
          "Enabled": false,
          "Items": Array [],
          "Quantity": 0,
        },
        "ViewerProtocolPolicy": "redirect-to-https",
      },
      "Enabled": true,
      "HttpVersion": "http2",
      "Origins": Object {
        "Items": Array [
          Object {
            "CustomHeaders": Object {
              "Items": Array [],
              "Quantity": 0,
            },
            "DomainName": "mybucket.s3.eu-west-1.amazonaws.com",
            "Id": "mybucket",
            "OriginPath": "",
            "S3OriginConfig": Object {
              "OriginAccessIdentity": "",
            },
          },
        ],
        "Quantity": 1,
      },
      "PriceClass": "PriceClass_All",
    },
    "Tags": Object {
      "Items": Array [],
    },
  },
}
`;

exports[`S3 origins when origin is outside of us-east-1 updates distribution 1`] = `
Object {
  "DistributionConfig": Object {
    "CacheBehaviors": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "Comment": "",
    "CustomErrorResponses": Object {
      "Items": Array [],
      "Quantity": 0,
    },
    "DefaultCacheBehavior": Object {
      "AllowedMethods": Object {
        "CachedMethods": Object {
          "Items": Array [
            "HEAD",
            "GET",
          ],
          "Quantity": 2,
        },
        "Items": Array [
          "HEAD",
          "GET",
        ],
        "Quantity": 2,
      },
      "Compress": false,
      "DefaultTTL": 86400,
      "FieldLevelEncryptionId": "",
      "ForwardedValues": Object {
        "Cookies": Object {
          "Forward": "none",
        },
        "Headers": Object {
          "Items": Array [],
          "Quantity": 0,
        },
        "QueryString": false,
        "QueryStringCacheKeys": Object {
          "Items": Array [],
          "Quantity": 0,
        },
      },
      "LambdaFunctionAssociations": Object {
        "Items": Array [],
        "Quantity": 0,
      },
      "MaxTTL": 31536000,
      "MinTTL": 0,
      "RealtimeLogConfigArn": undefined,
      "ResponseHeadersPolicyId": "",
      "SmoothStreaming": false,
      "TargetOriginId": "anotherbucket",
      "TrustedSigners": Object {
        "Enabled": false,
        "Items": Array [],
        "Quantity": 0,
      },
      "ViewerProtocolPolicy": "redirect-to-https",
    },
    "Enabled": true,
    "Origins": Object {
      "Items": Array [
        Object {
          "CustomHeaders": Object {
            "Items": Array [],
            "Quantity": 0,
          },
          "DomainName": "anotherbucket.s3.eu-west-1.amazonaws.com",
          "Id": "anotherbucket",
          "OriginPath": "",
          "S3OriginConfig": Object {
            "OriginAccessIdentity": "",
          },
        },
      ],
      "Quantity": 1,
    },
    "PriceClass": "PriceClass_All",
  },
  "Id": "distributionwithS3origin",
  "IfMatch": "etag",
}
`;
